# npm-audit-tree

./: .gitignore  Cargo.toml  README.md  package.json
.github/workflows/: release.yml
docs/: how-it-works.md
scripts/: install.js
src/: main.rs
