[package]
name = "npm-audit-tree"
version = "1.0.2"
edition = "2024"
description = "Display npm audit vulnerabilities with their dependency trees"
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
colored = "2"

[profile.release]
strip = true
lto = true
